# duplicate-files-remover

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  vcpkg.json
include/: Core.h  FileEntry.h  Scope.h  SynchronizedQueue.h  ThreadPool.h
src/: Core.cpp  FileEntry.cpp  main.cpp
